# sunset

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  rust-toolchain.toml
.github/workflows/: ci.yml  daily-nightly.yml
async/: Cargo.toml  README.md  changelog.md  rust-toolchain.toml
async/examples/: con1.rs  serv1.rs  sshclient.rs  sunsetc.rs
async/src/: agent.rs  async_channel.rs  async_client.rs  async_door.rs  async_sunset.rs  client.rs  cmdline_client.rs  fdio.rs  known_hosts.rs  knownhosts.rs  lib.rs  pty.rs  server.rs  simple_client.rs
demo/common/: Cargo.toml
demo/common/src/: config.rs  copyloop.rs  lib.rs  menu.rs  menu_buf.rs  server.rs  takepipe.rs
demo/picow/: Cargo.toml
demo/picow/.cargo/: config.toml
demo/picow/src/: flashconfig.rs  keyboard.rs  main.rs  picowmenu.rs  serial.rs  usb.rs  w5500.rs  wifi.rs
demo/sftp/std/: Cargo.toml  README.md  debug_sftp_client.sh
demo/sftp/std/src/: demofilehandlemanager.rs  demoopaquefilehandle.rs  demosftpserver.rs  main.rs  stdhelpers.rs
demo/sftp/std/testing/: extract_txrx.sh  log_demo_sftp_with_test.sh  log_get_file_long.sh  log_get_file_short.sh  log_get_single.sh  log_get_single_long.sh  log_get_single_short.sh  merge_logs.sh  test_get.sh  test_get_file_long.sh  test_get_file_short.sh  test_get_long.sh  test_get_short.sh  test_get_single.sh  test_limit_write_req.sh  test_long_write_requests.sh  test_ls_dir.sh  test_only_file_upload.sh  test_put_file_long.sh  test_put_files.sh  test_read_dir.sh  test_stats.sh  test_stats_file.sh  test_write_requests.sh
demo/std/: Cargo.toml  tap.sh
demo/std/src/: main.rs  setupmenu.rs
docs/: design.md
door-smol/: Cargo.toml
door-smol/examples/: con1.rs
door-smol/src/: lib.rs
door-sshproto/: Cargo.toml
door-sshproto/examples/: kex1.rs
door-sshproto/src/: channel.rs  cliauth.rs  client.rs  config.rs  conn.rs  doorlog.rs  encrypt.rs  error.rs  hooks.rs  ident.rs  kex.rs  lib.rs  namelist.rs  packets.rs  random.rs  runner.rs  servauth.rs  server.rs  sign.rs  sshnames.rs  test.rs  traffic.rs  wireformat.rs
door-tokio/: Cargo.toml
door-tokio/examples/: con1.rs
door-tokio/src/: lib.rs
embassy/: Cargo.toml  README.md  rust-toolchain.toml
embassy/demos/common/: Cargo.toml  README.md  common.rs  demo_menu.rs  server.rs
embassy/demos/common/src/: config.rs  demo_menu.rs  lib.rs  menu.rs  server.rs  takepipe.rs
embassy/demos/picow/: Cargo.toml  build.rs  rust-toolchain.toml
embassy/demos/picow/.cargo/: config.toml
embassy/demos/picow/src/: flash_config.rs  flashconfig.rs  keyboard.rs  main.rs  picowmenu.rs  serial.rs  takepipe.rs  usb.rs  usbserial.rs  w5500.rs  wifi.rs
embassy/demos/std/: Cargo.toml  tap.sh
embassy/demos/std/src/: demo_menu.rs  main.rs  setupmenu.rs  tuntap.rs
embassy/src/: client.rs  embassy_channel.rs  embassy_sunset.rs  lib.rs  server.rs
fuzz/: Cargo.toml  README.md  reformat-server.py  server.dict
fuzz/.cargo/: config.toml
fuzz/src/: common.rs  lib.rs  server.rs
sftp/: Cargo.toml  README.md  changelog.md
sftp/src/: asyncsftpserver.rs  lib.rs  obscured_file_handle.rs  opaquefilehandle.rs  proto.rs  requestholder.rs  sftp-proto.rs  sftperror.rs  sftphandle.rs  sftphandler.rs  sftpserver.rs  sftpsink.rs  sftpsource.rs
sftp/src/sftphandler/: mod.rs  partialwriterequesttracker.rs  requestholder.rs  sftphandler.rs  sftpoutputchannelhandler.rs  sftpoutputchannelwrapper.rs
sftp/src/sftpserver/: mod.rs  readdirreplies.rs  readreplies.rs  sftpserver.rs
smol/: Cargo.toml
smol/examples/: con1.rs
smol/src/: async_client.rs  async_door.rs  lib.rs
src/: auth.rs  behaviour.rs  channel.rs  cliauth.rs  client.rs  config.rs  conn.rs  encrypt.rs  error.rs  event.rs  ident.rs  kex.rs  lib.rs  namelist.rs  noasync.rs  packets.rs  prelude.rs  random.rs  runner.rs  servauth.rs  server.rs  sign.rs  ssh_chapoly.rs  sshnames.rs  sshwire.rs  sunsetlog.rs  termmodes.rs  test.rs  traffic.rs
sshproto/: Cargo.toml
sshproto/examples/: kex1.rs
sshproto/src/: async_behaviour.rs  auth.rs  behaviour.rs  bhnostd.rs  bhtokio.rs  block_behaviour.rs  channel.rs  cliauth.rs  client.rs  config.rs  conn.rs  doorlog.rs  encrypt.rs  error.rs  ident.rs  kex.rs  lib.rs  namelist.rs  packets.rs  random.rs  runner.rs  servauth.rs  server.rs  sign.rs  sshnames.rs  sshwire.rs  test.rs  traffic.rs  wireformat.rs
sshwire-derive/: Cargo.toml  changelog.md
sshwire-derive/src/: lib.rs
sshwire_derive/: Cargo.toml
sshwire_derive/src/: lib.rs
stdasync/: Cargo.toml  build.rs  changelog.md
stdasync/examples/: serv1.rs  sunsetc.rs
stdasync/src/: agent.rs  cmdline_client.rs  fdio.rs  knownhosts.rs  lib.rs  pty.rs
testing/: ci.sh  update-toolchain.sh
