[package]
name = "sunset-async"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mkj/sunset"
license = "0BSD"
description = "Std async wrapper for Sunset SSH"

[dependencies]
sunset = { version = "0.2", path = "..", features = ["std", "openssh-key"] }
sunset-sshwire-derive = { version = "0.2", path = "../sshwire-derive" }
sunset-embassy = { version = "0.2", path = "../embassy" }
log = { version = "0.4", features = ["release_max_level_trace"] }
rpassword = "7.2"
argh = "0.1"

ssh-key = { version = "0.6", default-features = false, features = [ "std"] }

embassy-sync = { version = "0.5" }
embassy-futures = { version = "0.1" }

embedded-io-async = "0.6"

# "net" for AsyncFd on unix
tokio = { version = "1.25", features = ["net", "io-util", "signal"] }
futures = "0.3"

libc = "0.2"
nix = "0.26"

heapless = "0.8"

# TODO
pretty-hex = "0.4"

[features]
rsa = ["sunset/rsa"]

[dev-dependencies]
anyhow = { version = "1.0" }
pretty-hex = "0.4"
whoami = "1.3"
zeroize = "1.5"

tokio = { version = "1.25", features = ["full"] }

# adapters for tokio and async-std
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }

simplelog = "0.12"
# for simplelog
time = { version = "0.3", features = ["local-offset"] }

sunset-embassy = { version = "0.2", path = "../embassy", features = ["multi-thread"] }
critical-section = { version = "1.1", features = ["std"] }
