[package]
name = "sunset-async"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mkj/sunset"
categories = ["network-programming", "embedded", "no-std"]
license = "0BSD"
description = "Async for Sunset SSH"

[dependencies]
embassy-sync = { version = "0.7" }
embassy-futures = { version = "0.1" }
embedded-io-async = "0.6"
portable-atomic.workspace = true
pin-utils = { version = "0.1" }

sunset = { version = "0.2.0", path = "../", features = ["embedded-io"] }

log = { version = "0.4" }

[features]
# Use a critical-section mutex to lock state. This feature must be enabled
# to run on executors that require futures to be Send (such as default Tokio).
# The application should depend on critical-section "std" feature.
# When multi-thread is disabled locking overhead is avoided.
multi-thread = []
