[package]
name = "sunset-async"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/mkj/sunset"
categories = ["network-programming", "embedded", "no-std"]
license = "0BSD"
description = "Async for Sunset SSH"

[dependencies]
embassy-sync.workspace = true
embassy-futures.workspace = true
embedded-io-async.workspace = true
portable-atomic.workspace = true

sunset = { workspace = true, features = ["embedded-io"] }

log.workspace = true

[features]
# Use a critical-section mutex to lock state. This feature must be enabled
# to run on executors that require futures to be Send (such as default Tokio).
# The application should depend on critical-section "std" feature.
# When multi-thread is disabled locking overhead is avoided.
multi-thread = []
alloc = ["sunset/alloc"]
std = ["sunset/std", "alloc"]
