[package]
name = "door-smol"
version = "0.1.0"
edition = "2021"

[dependencies]
smol = { version = "1.2" }
door-sshproto = { path = "../door-sshproto", features = ["std"] }
log = { version = "0.4" }
futures-io = "0.3"
pin-utils = "0.1"
async-dup = "1.2"

# TODO
anyhow = { version = "1.0" }

[dev-dependencies]
snafu = { version = "0.7", default-features = true }
pretty-hex = "0.2"
simplelog = "0.12"
