[package]
name = "door-sshproto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"]}
snafu = { version = "0.7", default-features = false, features = ["rust_1_46"] }
# TODO: check that log macro calls disappear in no_std builds
log = { version = "0.4" }
# TODO: probably needs changing for embedded platforms
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
heapless = "0.7.10"

ring = { version = "0.16", default-features = false }
# for aes-ctr mode
ctr = "0.9"
aes = "0.8"
sha2 = "0.10"
hmac = "0.12"
ssh-key = { version = "0.4", default-features = false, features = ["ed25519", "ecdsa", "sha2"] }

# for debugging
pretty-hex = "0.2"

[features]
std = []

# serde_state = { version = "0.4", default-features = false, features = ["derive"]}
# serde_derive_state = { version = "0.4" }

[dev-dependencies]
# toml = "0.5"
# examples want std::error
snafu = { version = "0.7", default-features = true }
anyhow = { version = "1.0" }
pretty-hex = "0.2"
simplelog = { version = "0.12", features = ["test"] }

[[example]]
name = "kex1"

