[package]
name = "door-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17", features = ["full"] }
door-sshproto = { path = "../sshproto", features = ["std"] }
log = { version = "0.4" }
pin-utils = "0.1"

# anyhow = { version = "1.0" }

[dev-dependencies]
snafu = { version = "0.7", default-features = true }
anyhow = { version = "1.0" }
pretty-hex = "0.2"
simplelog = "0.12"
