[package]
name = "sunset-embassy"
version = "0.2.0-alpha"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
embedded-io = { version = "0.4", features = ["async"] }
pin-utils = { version = "0.1" }

sunset = { path = "../", features = ["embedded-io"] }

log = { version = "0.4" }
