[package]
name = "sunset-embassy"
version = "0.2.0-alpha"
edition = "2021"
repository = "https://github.com/mkj/sunset"
categories = ["network-programming", "embedded", "no-std"]
license = "0BSD"

[dependencies]
embassy-sync = { version = "0.2.0" }
embassy-futures = { version = "0.1.0" }
embedded-io = { version = "0.4", features = ["async"] }
atomic-polyfill = "1.0"
pin-utils = { version = "0.1" }

sunset = { path = "../", features = ["embedded-io"] }

log = { version = "0.4" }

defmt = { version = "0.3", optional = true }

[features]
defmt = ["dep:defmt"]
