[package]
name = "sunset-sftp"
version = "0.1.2"
edition = "2024"

[features]
default = []
# long paths support, which allows paths up to 4096 bytes, by default paths are limited to 256 bytes
long-paths-4096 = []
long-paths-1024 = []

# Standard library support - enables std helpers
std = []

[dependencies]
sunset = { version = "0.3.0", path = "../" }
sunset-async = { path = "../async", version = "0.3" }
sunset-sshwire-derive = { version = "0.2", path = "../sshwire-derive" }


embedded-io-async = "0.6"
num_enum = { version = "0.7.4", default-features = false }
paste = "1.0"
log = "0.4"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
