[package]
name = "sunset-sftp"
version = "0.1.2"
edition = "2024"

[features]
# long paths support, which allows paths up to 4096 bytes, by default paths are limited to 256 bytes
long-paths-4096 = []
long-paths-1024 = []

# Standard library support - enables std helpers
std = []

[dependencies]
sunset = { path = "../" }
sunset-async = { path = "../async" }
sunset-sshwire-derive = { path = "../sshwire-derive" }


embedded-io-async = "0.6"
num_enum = { version = "0.7.4", default-features = false }
paste = "1.0.25" # Paste is no longer maintained (RUSTSEC-2024-0436). Fixing the used version to latest one. Not making the move to Pastey at the moment
log = "0.4"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
