[package]
name = "door-smol"
version = "0.1.0"
edition = "2021"

[dependencies]
door-sshproto = { path = "../sshproto", features = ["std"] }
log = { version = "0.4" }
rpassword = "6.0"

# smol = { version = "1.2" }
# futures = "0.3"
# futures-io = "0.3"
# futures-micro = "0.5"
# async-dup = "1.2"

pin-utils = "0.1"
tokio = { version = "1.17", features = ["full"] }
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }

async-trait = "0.1"

# TODO
anyhow = { version = "1.0" }
pretty-hex = "0.3"

[dev-dependencies]
snafu = { version = "0.7", default-features = true }
pretty-hex = "0.3"
simplelog = "0.12"
