[package]
name = "door-sshproto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"]}
snafu = { version = "0.7", default-features = false, features = ["rust_1_46"] }
# TODO: check that log macro calls disappear in no_std builds
log = { version = "0.4" }
heapless = "0.7.10"
no-panic = "0.1"

# ring = { version = "0.16", default-features = false }
ring = { version = "0.17.0-not-released-yet", git = "https://github.com/mkj/ring", branch = "ed25519-piecewise", default-features = false }

# TODO: needs changing for embedded platforms
rand = { version = "0.8", default-features = false }

# for aes-ctr mode
ctr = "0.9"
aes = "0.8"
sha2 = { version = "0.10", default-features = false }
hmac = "0.12"
digest = "0.10"
ssh-key = { version = "0.4", default-features = false, features = ["ed25519", "ecdsa", "sha2"] }

# for debugging
pretty-hex = "0.3"

pin-utils = "0.1"

# tokio = { version = "1.18", features = ["sync"], optional = true }
async-trait = { version = "0.1", optional = true }

[dependencies.x25519-dalek]
version = "2.0.0-pre.2"
default-features = false
# TODO: switch based on targets somehow?
features = [ "u32_backend" ]
# pending https://github.com/dalek-cryptography/x25519-dalek/pull/87
# upstream version uses older rand
git = "https://github.com/mobilecoinfoundation/x25519-dalek"
branch = "mobilecoin"

[features]
std = ["async-trait", "rand/getrandom"]
# tokio-queue = ["dep:tokio"]

# serde_state = { version = "0.4", default-features = false, features = ["derive"]}
# serde_derive_state = { version = "0.4" }

[dev-dependencies]
# toml = "0.5"
# examples want std::error
snafu = { version = "0.7", default-features = true }
anyhow = { version = "1.0" }
pretty-hex = "0.3"
simplelog = { version = "0.12", features = ["test"] }
proptest = "1.0"

serde_json = "1.0"

[[example]]
name = "kex1"
