[package]
name = "door-sshproto"
version = "0.1.0"
edition = "2021"

[dependencies]
sshwire_derive = { path = "../sshwire_derive" }

snafu = { version = "0.7", default-features = false, features = ["rust_1_46"] }
# TODO: check that log macro calls disappear in no_std builds
log = { version = "0.4" }
heapless = "0.7.10"
no-panic = "0.1"

# TODO: needs changing for embedded platforms
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }

ctr = "0.9"
aes = "0.8"
sha2 = { version = "0.10", default-features = false }
hmac = "0.12"
digest = "0.10"
ssh-key = { version = "0.4", default-features = false, features = ["ed25519", "ecdsa", "sha2"] }
chacha20 = "0.9"
poly1305 = "0.7"

# for debugging
pretty-hex = { version = "0.3", default-features = false }

pin-utils = "0.1"

# tokio = { version = "1.18", features = ["sync"], optional = true }
async-trait = { version = "0.1", optional = true }

[dependencies.ed25519-dalek]
version = "2.0.0-pre.1"
default-features = false
# TODO: switch u32/u64 based on targets somehow? needs to match x25519's
# TODO: is "rand" needed here, or only for tests?
features = [ "u32_backend", "rand" ]
# pending https://github.com/dalek-cryptography/ed25519-dalek/pull/193
# and also sign_parts()
# git = "https://github.com/mkj/ed25519-dalek"
# branch = "parts"
path = "/home/matt/3rd/rs/ed25519-dalek"

[dependencies.x25519-dalek]
version = "2.0.0-pre.2"
default-features = false
# TODO: switch based on targets somehow?
features = [ "u32_backend" ]
# pending https://github.com/dalek-cryptography/x25519-dalek/pull/87
# upstream version uses older rand
git = "https://github.com/mobilecoinfoundation/x25519-dalek"
branch = "mobilecoin"

[features]
default = [ "getrandom" ]
std = ["async-trait"]
# tokio-queue = ["dep:tokio"]

getrandom = ["rand/getrandom"]
# don't use this
fakerandom = []

[dev-dependencies]
# toml = "0.5"
# examples want std::error
snafu = { version = "0.7", default-features = true }
anyhow = { version = "1.0" }
pretty-hex = "0.3"
simplelog = { version = "0.12", features = ["test"] }
proptest = "1.0"

serde_json = "1.0"

[[example]]
name = "kex1"
