[package]
name = "door-sshproto"
version = "0.1.0"
edition = "2021"
categories = ["network-programming", "no-std"]
keywords = ["ssh"]

[dependencies]
sshwire_derive = { path = "../sshwire_derive" }

snafu = { version = "0.7", default-features = false, features = ["rust_1_46"] }
# TODO: check that log macro calls disappear in no_std builds
log = { version = "0.4" }
heapless = "0.7.10"
no-panic = "0.1"

# allows avoiding utf8 for SSH identifier names
ascii = { version = "1.0", default-features = false }

rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }

ctr = "0.9"
aes = "0.8"
sha2 = { version = "0.10", default-features = false }
hmac = "0.12"
digest = "0.10"
signature = { version = "1.4", default-features = false }
chacha20 = "0.9"
poly1305 = "0.7"
# ed25519/x25519
salty = { version = "0.2", git = "https://github.com/mkj/salty", branch = "parts" }
# could be optional? though isn't linked if openssh keys aren't loaded
ssh-key = { version = "0.4", default-features = false, features = ["ed25519", "ecdsa", "sha2"] }

# for debug printing
pretty-hex = { version = "0.3", default-features = false }

async-trait = { version = "0.1", optional = true }

[features]
default = [ "getrandom" ]
std = ["async-trait", "snafu/std"]
# tokio-queue = ["dep:tokio"]

getrandom = ["rand/getrandom"]
# don't use this
fakerandom = []

[dev-dependencies]
# toml = "0.5"
# examples want std::error
snafu = { version = "0.7", default-features = true }
anyhow = { version = "1.0" }
pretty-hex = "0.3"
simplelog = { version = "0.12", features = ["test"] }
proptest = "1.0"

serde_json = "1.0"

[[example]]
name = "kex1"
