[package]
name = "sunset-demo-std"
version = "0.1.0"
edition = "2021"

[dependencies]
sunset = { workspace = true, features = ["rsa", "std"] }
sunset-async.workspace = true
sunset-demo-common.workspace = true

# 131072 was determined empirically
embassy-executor = { version = "0.5",  features = ["log", "arch-std", "integrated-timers", "executor-thread", "task-arena-size-131072"] }
embassy-time = { version = "0.3",  default-features=false, features = ["log", "std"] }
# embassy-net/nightly is required for asynch::Read/Write on TcpReader/TcpWriter
embassy-net = { version = "0.5", features = ["tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-tuntap = { version = "0.1" }
embassy-sync = { version = "0.5" }
embassy-futures = { version = "0.1" }
atomic-polyfill = "1.0"

log = { version = "0.4" }
# default regex feature is huge
env_logger = { version = "0.11", default-features=false, features = ["auto-color", "humantime"] }

embedded-io-async = "0.6"
heapless = "0.8"

# for tuntap
libc = "0.2.101"
async-io = "1.6.0"

# using local fork
# menu = "0.3"


critical-section = "1.1"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10", default-features = false }
