[package]
name = "sunset-demo-sftp-std"
version = "0.1.2"
edition = "2021"

[dependencies]
sunset = { workspace = true, features = ["rsa", "std"] }
sunset-async.workspace = true
sunset-demo-common.workspace = true
sunset-sftp = { version = "0.1.0", path = "../../../sftp", features = ["std"] }

# 131072 was determined empirically
embassy-executor = { workspace = true, features = [
    "executor-thread",
    "platform-std",
    "log",
] }
embassy-net = { workspace = true, features = [
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-tuntap = { version = "0.1" }
embassy-sync.workspace = true
embassy-futures.workspace = true
# embassy-time dep required to link a time driver
embassy-time = { workspace = true, features = [
    "log",
    "std",
] }

log.workspace = true
# default regex feature is huge
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }

embedded-io-async.workspace = true
heapless.workspace = true

# for tuntap
libc = "0.2.101"
async-io = "1.6.0"

critical-section = "1.1"

rand = { version = "0.8", features = ["getrandom"] }

strict-path = "0.2"
